# testing-fastapi

./: Makefile  README.md  docker-compose.yml  hello.py  pyproject.toml
app/: config.py  main.py
app/books/: routes.py  schemas.py  service.py
app/db/: base.py  models.py
app/tests/: conftest.py  test_books.py  test_users.py
app/users/: routes.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 171a0469ffc6_initial_tables.py  acc63a40646a_initial_tables.py
